--- a/inex.html
+++ b/inex.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>lol</title>
 </head>
 <body>
 
+
+<h1>Lorem ipsum dolor.</h1>
 </body>
 </html>
